--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: 짱수니의 개발 soup
+title: 짱수니 coding soup
 description: "프로그래밍 지식을 공유하는 짱수니의 깃허브 개발블로그"
 logo_img: "/assets/img/favicon.webp"
 profile_img: "/assets/img/profile.webp"
