--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ giscus_repo: "GangJiyeon/Gangjiyeon.github.io"
 giscus_repoId: "R_kgDONkzylA"
 giscus_category: "Q&A"
 giscus_categoryId: "DIC_kwDONkzylM4Cluu9"
-goatcounter_code: byanko77
+goatcounter_code: 
 google_analytics:
 
 # If your repo name follows the format "<user-name>.github.io", then leave the below blank.
