--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,11 @@ logo_img: "/assets/img/favicon.webp"
 profile_img: "/assets/img/profile.webp"
 
 # Social Links
-email: wldus23966@gmail.com
+email: wldus23966@naver.com
 github_username: GangJiyeon
-twitter_username: twitter
-instagram_username: instagram
+youtube_username: twitter
+blog_username: wldus23968
 linkedin_username: linkedin
-facebook_username: facebook
 
 # External API
 giscus_repo: "GangJiyeon/Gangjiyeon.github.io"
