--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 title: Example.com
 description: "Introduction for you blog"
 logo_img: "/assets/img/favicon.webp"
-profile_img: "/assets/img/me.gif"
+profile_img: "/assets/img/me.png"
 
 # Social Links
 email: example@gmail.com
