--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: 코딩덕덕
+title: 코딩덕덕 🐥
 description: "프로그래밍 지식을 공유하는 지연이의 깃허브 개발블로그"
 logo_img: "/assets/img/favicon.webp"
 profile_img: "/assets/img/me.png"
