--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,23 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
+  - title: "Home"
+    url: https://https://gangjiyeon.github.io/
+  - title: "Portfolio"
+    url: https://https://gangjiyeon.github.io/me.portfolio
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
+
+
+sidebar-category:
+- title: "카테고리"
+  children:
+    - title: "블로그"
+      url: "/blog"
+    - title: "카테고리B"
+      url:  "/CategoryB"
+    - title: "카테고리C"
+      url:  "/CategoryC"
