--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,11 +13,9 @@ main:
 
 
 sidebar-category:
-- title: "카테고리"
+- title: "category"
   children:
-    - title: "블로그"
-      url: "/blog"
-    - title: "카테고리B"
-      url:  "/CategoryB"
-    - title: "카테고리C"
-      url:  "/CategoryC"
+    - title: "develop"
+      url: "/develop"
+    - title: "daily"
+      url:  "/daily"
