--- a/_config.yml
+++ b/_config.yml
@@ -113,15 +113,15 @@ analytics:
 
 # Site Author
 author:
-  name             : "강지연"
+  name             : "Jiyeon"
   avatar           : https://gangjiyeon.github.io/assets/img/me.png"
-  bio              : "I am an **amazing** person."
+  bio              : "wecome"
   location         : "Gimhae, Korea"
   email            :
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: "mailto:your.name@email.com"
+      url: "wldus23966@naver.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
@@ -133,7 +133,7 @@ author:
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url: "https://github.com/"
+      url: "https://github.com/Gangjiyeon"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
