--- a/_config.yml
+++ b/_config.yml
@@ -12,14 +12,14 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "dirt" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "지연이의 깃허브 개발블로그 🐶"
+title                    : "Jiyeon's Devlog"
 title_separator          : "-"
-subtitle                 : # site tagline that appears below site title in masthead
+subtitle                 : "지연이의 깃허브 개발블로그 🐶 # site tagline that appears below site title in masthead
 name                     : "Kang Jiyeon"
 description              : "안녕~"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
