--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
 title                    : "Jiyeon's Devlog"
 title_separator          : "-"
-subtitle                 : "지연이의 깃허브 개발블로그 🐶 # site tagline that appears below site title in masthead
+subtitle                 : "지연이의 깃허브 개발블로그 🐶" # site tagline that appears below site title in masthead
 name                     : "Kang Jiyeon"
 description              : "안녕~"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
