--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,9 @@ title_separator          : "-"
 subtitle                 : "지연이의 깃허브 개발블로그 🐶" # site tagline that appears below site title in masthead
 name                     : "Kang Jiyeon"
 description              : "안녕~"
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://Ganjiyeon.github.io"
 baseurl                  : 
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "Gangjiyeon/Ganjiyeon.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -116,7 +116,7 @@ author:
   name             : "Jiyeon"
   avatar           : https://gangjiyeon.github.io/assets/img/me.png"
   bio              : "wecome"
-  location         : "Gimhae, Korea"
+  location         : "Gimhae, Republic of Korea"
   email            :
   links:
     - label: "Email"
@@ -324,3 +324,5 @@ defaults:
       share: true
       related: true
       sidebar_main: true
+
+date_format: "%Y-%m-%d"
