--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ analytics:
 author:
   name             : "Jiyeon"
   avatar           : https://gangjiyeon.github.io/assets/img/me.png"
-  bio              : "wecome"
+  bio              : "It's my CV"
   location         : "Gimhae, Republic of Korea"
   email            :
   links:
