--- a/_config.yml
+++ b/_config.yml
@@ -113,10 +113,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Jiyeon"
+  name             : "Jiyeon Kang"
   avatar           : https://gangjiyeon.github.io/assets/img/me.png"
   bio              : "It's my CV"
-  location         : "Gimhae, Republic of Korea"
+  location         : "Republic of Korea"
   email            :
   links:
     - label: "Email"
